log
Fri 25 Aug 2023 02:06:52 AM UTC: 
 tests:  0|6
total_score: 0/70
f3164a2
Fri 25 Aug 2023 02:26:56 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:15: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   38 |     nuevaLista->first = NULL;
      |               ^~
list.c:39:15: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   39 |     nuevaLista->last = NULL;
      |               ^~
Compilation failed
73fcd7d
Fri 25 Aug 2023 02:34:18 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from list.c:4,
                 from test.c:5:
list.h:18:3: error: conflicting types for ‘List’
   18 | } List;
      |   ^~~~
list.h:4:21: note: previous declaration of ‘List’ was here
    4 | typedef struct List List;
      |                     ^~~~
In file included from test.c:5:
list.c:8:8: error: redefinition of ‘struct Node’
    8 | struct Node {
      |        ^~~~
In file included from list.c:4,
                 from test.c:5:
list.h:7:8: note: originally defined here
    7 | struct Node {
      |        ^~~~
Compilation failed
bb1ffbd
Fri 25 Aug 2023 03:03:05 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 25/70
b3967b5
Fri 25 Aug 2023 03:04:36 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
c445fb6
Fri 25 Aug 2023 03:06:34 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
ec09e49
Fri 25 Aug 2023 03:07:40 AM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|1
total_score: 55/70
c0d1b39
Fri 25 Aug 2023 03:08:48 AM UTC: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  12|0
total_score: 70/70
ba1c81a
